refactor: Improve bot data handling and UI updates for navigation and stats