@@ -4,7 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
@@ -18,45 +18,55 @@ public class BlueMapProxyServlet extends HttpServlet {
         this.bluemapBaseUrl = bluemapBaseUrl;
     }
 
-    @Override
+@Override
     protected void service(HttpServletRequest req, HttpServletResponse resp) throws IOException {
-        String path = req.getRequestURI().replaceFirst("/bluemap", "");
-        String query = req.getQueryString();
-        String url = bluemapBaseUrl + path + (query != null ? "?" + query : "");
+        try {
+            String path = req.getRequestURI().replaceFirst("/bluemap", "");
+            String query = req.getQueryString();
 
-        HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
-        conn.setRequestMethod(req.getMethod());
+            URI uri = new URI(
+                "http",                // схема (http, не https)
+                null,                  // user info
+                bluemapBaseUrl,        // хост
+                -1,                    // порт (по умолчанию)
+                path,                  // путь
+                query,                 // query string
+                null                   // fragment
+            );
 
-        conn.setDoInput(true);
-        conn.setDoOutput(false);
+            HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
+            conn.setRequestMethod(req.getMethod());
+            conn.setDoInput(true);
+            conn.setDoOutput(false);
 
-        // Копируем заголовки запроса
-        Enumeration<String> headerNames = req.getHeaderNames();
-        while (headerNames.hasMoreElements()) {
-            String header = headerNames.nextElement();
-            if ("host".equalsIgnoreCase(header)) continue;
-            conn.setRequestProperty(header, req.getHeader(header));
-        }
-
-        int status = conn.getResponseCode();
-        resp.setStatus(status);
-
-        // Копируем заголовки ответа
-        conn.getHeaderFields().forEach((key, values) -> {
-            if (key != null) {
-                for (String v : values) {
-                    resp.addHeader(key, v);
-                }
+            Enumeration<String> headerNames = req.getHeaderNames();
+            while (headerNames.hasMoreElements()) {
+                String header = headerNames.nextElement();
+                if ("host".equalsIgnoreCase(header)) continue;
+                conn.setRequestProperty(header, req.getHeader(header));
             }
-        });
 
-        // Пересылаем тело ответа
-        try (InputStream in = conn.getInputStream();
-            OutputStream out = resp.getOutputStream()) {
-            in.transferTo(out);
-        } catch (IOException e) {
-            // Может быть тело отсутствует (например, 304 Not Modified)
-            resp.setStatus(HttpServletResponse.SC_NO_CONTENT);
+            int status = conn.getResponseCode();
+            resp.setStatus(status);
+
+            conn.getHeaderFields().forEach((key, values) -> {
+                if (key != null) {
+                    for (String v : values) {
+                        resp.addHeader(key, v);
+                    }
+                }
+            });
+
+            try (InputStream in = conn.getInputStream(); OutputStream out = resp.getOutputStream()) {
+                in.transferTo(out);
+            } catch (IOException e) {
+                resp.setStatus(HttpServletResponse.SC_NO_CONTENT);
+            }
+
+        } catch (Exception e) {
+            resp.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+            resp.getWriter().write("❌ Invalid BlueMap URL request: " + e.getMessage());
         }
     }
+
 }
